# xll

./: .gitignore  CMakeLists.txt  LICENCE.md  Makefile  NOTES.md  README.md  cppcon2021.txt  cppcon2021.txt.bak  inc.txt  portfile.cmake  setup.bat  talk.html  talk.md  xll-msvc16-x64-build.nuget.bat  xll-msvc16-x64.nuspec  xll.1.0.0.nuspec  xll.msi  xll.props  xll.sln  xll.vcxproj  xll.vcxproj.filters
Visualizers/: oper.natvis  oper12.natvis
content/: addin.h  args.h  auto.cpp  auto.h  concepts.h  debug.cpp  defines.c  defines.h  dllmain.cpp  ensure.h  error.cpp  error.h  excel.h  exports.h  fp.h  handle.h  on.h  oper.h  register.h  registry.h  splitpath.h  sref.h  traits.h  utf8.h  xll.h  xll_codec.h  xllio.h  xloper.h
docs/: Excel4Macros.md  Excel4MacrosA-D.md  Excel4MacrosA-Dcopy.docx  Excel4MacrosA-Dcopy.md  Excel4MacrosE-G.md  Excel4MacrosE-Gcopy.docx  Excel4MacrosE-Gcopy.md  Excel4MacrosH-P.docx  Excel4MacrosH-P.md  Excel4MacrosH-Pcopy.md  Excel4MacrosQ-S.docx  Excel4MacrosQ-S.md  Excel4MacrosQ-Scopy.md  Excel4MacrosT-Z.md  Excel4MacrosT-Zcopy.docx  Excel4MacrosT-Zcopy.md  Makefile  README.md  handles.txt  index.xslt  monte.xlsx  xll.css  xll.xml  xll.xslt
install/: install.vdproj
project/: MyTemplate.vstemplate  project.cpp  project.vcxproj  project.vcxproj.filters
test/: CMakeLists.txt  NOTES.md  async.cpp  handle.cpp  lambda.cpp  test.cpp  test.vcxproj  test.vcxproj.filters  transpose.cpp  wininet.cpp
xll/: CMakeLists.txt  XLCALL.CPP  addin.h  arg.h  args.h  auto.cpp  auto.h  cdecl.h  codec.h  concepts.h  debug.cpp  defines.c  defines.h  dllmain.cpp  document.cpp  document.h  documentation.html  ensure.h  error.cpp  error.h  excel.h  exports.h  fms_view.h  fp.h  handle.h  inc.txt  oargs.h  on.h  oper.h  paste.cpp  paste.h  platform.h  register.h  registry.h  splitpath.h  spreadsheet.cpp  spreadsheet.h  sref.h  traits.h  tsort.txt  (+10 more)
xll.t/: CMakeLists.txt  codec.t.cpp  oper.t.cpp  registry.t.cpp  sref.t.cpp  utf8.t.cpp  view.t.cpp  xll.t.cpp  xll.t.vcxproj  xll.t.vcxproj.filters
xll/macrofun/: xll_addin.cpp  xll_addin_manager.cpp  xll_addin_manager.h  xll_document.cpp  xll_function.cpp  xll_install.cpp  xll_macrofun.cpp  xll_macrofun.h  xll_paste.cpp  xll_paste.h  xll_spreadsheet.cpp  xll_trace.cpp  xll_utility.cpp
xll/utility/: xll_throttle.cpp
xll_project/: setup.bat  (+5 more)
(+1098 files in other folders)
